# feelies

./: .cursorignore  .env.example  .gitattributes  .gitignore  AGENTS.md  AUDIT_cursor_rules_skills_2026-06-07.md  CLAUDE.md  README.md  conftest.py  mcp-config.template.json  platform.yaml  pyproject.toml  tmp_daily_pnl.py
.cursor/plans/: alpha_architecture_v2.3_dcfc4cbc.plan.md  alpha_plug-and-play_final_ddbd7ce9.plan.md  backtest_validation_suite_768d946e.plan.md  e2e_backtest_verification_a94f35c9.plan.md  feelies-production-remediation_a5245a78.plan.md  fill_alpha_pipeline_gaps_a595ad3e.plan.md  p5_portfolio_alpha_framework_c772949d.plan.md  paper_rth_test_plan_cd2944d4.plan.md  paper_trading_implementation_f712702b.plan.md  parallel_ingest_+_disk_cache_3ca43acc.plan.md  polygon-to-massive_api_migration_f360ccc2.plan.md  skill_review_remediation_91446f78.plan.md
.cursor/rules/: karpathy-guidelines.mdc  platform-invariants.mdc
.cursor/skills/: README.md
.github/workflows/: backtest.yml
alphas/: SCHEMA.md  mean_reversion.alpha.yaml
alphas/_paper_smoke_v1/: paper_smoke_v1.alpha.yaml
alphas/_template/: template.alpha.yaml  template_legacy_signal.alpha.yaml  template_portfolio.alpha.yaml  template_signal.alpha.yaml
alphas/h002_drift_fade/: current_spread_bp.py  drift_bps.py  h002_drift_fade.alpha.yaml  imbalance_delta.py  mu_ema.py  spread_z.py  tradability_score.py
alphas/h002_sde_pde_mu_drift/: h002_sde_pde_mu_drift.alpha.yaml  imbalance_pressure.py  mu_ema.py
alphas/pofi_benign_midcap_v1/: pofi_benign_midcap_v1.alpha.yaml
alphas/pofi_burst_revert_v1/: pofi_burst_revert_v1.alpha.yaml
alphas/pofi_hawkes_burst_v1/: pofi_hawkes_burst_v1.alpha.yaml
alphas/pofi_inventory_revert_v1/: pofi_inventory_revert_v1.alpha.yaml
alphas/pofi_kyle_drift_v1/: pofi_kyle_drift_v1.alpha.yaml
alphas/pofi_l1_imbalance_momentum_v1/: pofi_l1_imbalance_momentum_v1.signal.alpha.yaml  portfolio.alpha.yaml  signal.alpha.yaml
alphas/pofi_moc_imbalance_v1/: pofi_moc_imbalance_v1.alpha.yaml
alphas/pofi_xsect_mixed_mechanism_v1/: pofi_xsect_mixed_mechanism_v1.alpha.yaml
alphas/pofi_xsect_v1/: pofi_xsect_v1.alpha.yaml  pofi_xsect_v1.with_decay.alpha.yaml
alphas/pro_burst_revert_v1/: pro_burst_revert_v1.alpha.yaml
alphas/pro_kyle_benign_v1/: pro_kyle_benign_v1.alpha.yaml
alphas/pro_xsect_mixed_mechanism_v1/: pro_xsect_mixed_mechanism_v1.alpha.yaml
alphas/pro_xsect_v1/: pro_xsect_v1.alpha.yaml  pro_xsect_v1.with_decay.alpha.yaml
alphas/sig_benign_midcap_v1/: sig_benign_midcap_v1.alpha.yaml
alphas/sig_dislocation_lambda_drift_v1/: sig_dislocation_lambda_drift_v1.alpha.yaml
alphas/sig_hawkes_burst_v1/: sig_hawkes_burst_v1.alpha.yaml
alphas/sig_inventory_revert_v1/: sig_inventory_revert_v1.alpha.yaml
alphas/sig_kyle_drift_v1/: sig_kyle_drift_v1.alpha.yaml
alphas/sig_moc_imbalance_v1/: sig_moc_imbalance_v1.alpha.yaml
alphas/spread_mean_reversion/: mid_ewma.py  mid_price.py  mid_zscore.py  spread.py  spread_mean_reversion.alpha.yaml
alphas/trade_cluster_drift/: aggressor_flow.py  cluster_persistence.py  microprice.py  mu_ema.py  order_book_imbalance.py  parity_config.json  parity_fingerprint.json  regime_calibration.json  sde_drift_state.py  trade_cluster_drift.alpha.yaml  trade_flow.py  trade_intensity.py
alphas/trade_cluster_hybrid_sde/: aggressor_flow.py  mu_ema.py  order_imbalance.py  parity_fingerprint.json  queue_depletion_proxy.py  regime_calibration.json  spread_compression.py  trade_cluster_hybrid_sde.alpha.yaml  vpin_proxy.py
audits/: 2026-04-17-baseline.md  2026-04-17-iter-1.md  2026-05-01-baseline.md  2026-05-01-iter-02.md  2026-05-03-ingestion-robustness.md  AUDIT_PROTOCOL.md  README.md  _template.md  ingestion_replay_storage_audit_2026-06-06.md
colab/: test_func.ipynb
configs/: backtest_app.yaml  backtest_app_2d.yaml  backtest_app_edge_drive.yaml  backtest_multialpha.yaml  backtest_multialpha_edge_drive.yaml  backtest_multialpha_netting.yaml  backtest_multialpha_sizing_tilt.yaml  backtest_sizing_tilt.yaml  backtest_sizing_tilt_edgeonly.yaml  backtest_sizing_tilt_invonly.yaml  bt_app.yaml  bt_multialpha.yaml  bt_sig_benign_midcap.yaml  bt_sig_dislocation_lambda_drift_v1.yaml  bt_sig_hawkes_burst.yaml  bt_sig_inventory_revert.yaml  bt_sig_kyle_drift.yaml  bt_sig_moc_imbalance.yaml  paper_run.yaml  paper_smoke_rth.yaml
configs/health/: default.yaml
design_docs/: hypothesis_reasoning.md  three_layer_architecture.md
docs/: alpha_asset_regime_screening.md  alpha_health_check.md  app_trade_list_full.csv  data_adjustment_policy.md  paper_rth_test_runbook.md  three_layer_architecture.md
docs/acceptance/: decay_divergence_note.md  (+1 more)
grok/: 00_ARCHITECTURE.md  01_BOOTSTRAP.md  01_GOVERNANCE_LAYER.md  02_DATA_INGESTION.md  02_DATA_INTEGRITY_ENGINE.md  03_ALPHA_DEVELOPMENT.md  03_MARKET_STATE_ENGINE.md  04_ALPHA_FACTORY.md  04_BACKTEST_EXECUTION.md  05_EXPORT_LIFECYCLE.md  05_HYPOTHESIS_TESTING.md  06_EVOLUTION.md  06_PORTFOLIO_RISK_ARCHIVE.md  07_HYPOTHESIS_REASONING.md  07_HYPOTHESIS_REASONING_PLAN.md  07_PARITY_BRIDGE.md
scripts/: analyze_net_divergence.py  analyze_size_divergence.py  audit_regime_aapl_cache.py  build_reference_factor_loadings.py  calibrate_hawkes.py  collect_bt12_replay_returns.py  compare_multialpha_runs.py  compare_paper_backtest.py  debug_trade_position_mapping.py  diagnose_execution.py  diagnose_signals.py  export_full_trade_list.py  generate_bt12_fixtures.py  inspect_exposure.py  phase0_sig_benign_midcap_v1.py  rebaseline_parity_hashes.py  record_paper_perf_baseline.py  record_perf_baseline.py  regime_diagnostics.py  run_audit_pack.py  run_backtest.py  run_diagnostic.py  run_paper.py  run_paper_soak.py  run_parity_backtest.py  run_ui.py  run_validation.py  sensor_feature_ic.py  smoke_pipeline.py  split_backtest_emit.py  sweep_timeouts.py  tmp_daily_pnl_full.py  tmp_debug_exposure.py  verify_ib_broker.py
tests/: _ib_client_id.py  conftest.py  test_backtest_e2e.py  test_backtest_integration.py  test_bootstrap.py  test_package_exports.py  test_spread_mean_reversion_backtest.py  test_wireup_check.py  test_wireup_correctness.py
(+885 files in other folders)
