[project]
name = "feelies"
version = "0.1.0"
description = "Deterministic intraday trading platform"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "ruff>=0.3",
]
polygon = [
    "websockets>=13.0",
    "polygon-api-client>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feelies"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "functional: network-backed tests against live external services",
]
